pkgs/artifacts-cli/tests/snapshots/command_tests__regenerate_machine_scenarios.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - regenerate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
    - "--machine=machine-one"
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build: "/run/current-system/sw/bin/nix" "build" "--impure" "-I" "flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup" "--no-link" "--print-out-paths" "--expr" "\nlet\n  system = \"x86_64-linux\";\n  filterAttrs =\n    pred: set:\n    builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));\n  flake = builtins.getFlake (toString <flake>);\n  pkgs = flake.inputs.nixpkgs.legacyPackages.${system};\n  configurations = builtins.attrNames (\n    filterAttrs (\n      machine: configuration: builtins.hasAttr \"artifacts\" configuration.options\n    ) flake.nixosConfigurations\n  );\n  make = map (name: {\n    machine = name;\n    artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.nixosConfigurations.${name}.config.artifacts) then\n        flake.nixosConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) configurations;\nin\npkgs.writeText \"test.json\" (builtins.toJSON make)\n"
DEBUG: make config: [{"artifacts":{"artifact-one":{"files":{"first-secret":{"group":"root","mode":"0400","name":"first-secret","owner":"root","path":"/run/secrets/first-secret"}},"generator":"/nix/store/y3nn4hywc8n4ymlzi5h7l2qysk5icl3v-test_generator_one.sh","name":"artifact-one","prompts":{},"serialization":"test","shared":false},"artifact-two":{"files":{"second-secret":{"group":"root","mode":"0400","name":"second-secret","owner":"root","path":"/run/secrets/second-secret"}},"generator":"/nix/store/dvr437j28bzg11ymlj0kfcpifazkj3s7-test_generator_two.sh","name":"artifact-two","prompts":{},"serialization":"test","shared":false}},"config":{},"machine":"machine-one"},{"artifacts":{"artifact-one":{"files":{"first-secret":{"group":"root","mode":"0400","name":"first-secret","owner":"root","path":"/run/secrets/first-secret"}},"generator":"/nix/store/y3nn4hywc8n4ymlzi5h7l2qysk5icl3v-test_generator_one.sh","name":"artifact-one","prompts":{},"serialization":"test","shared":false},"artifact-two":{"files":{"second-secret":{"group":"root","mode":"0400","name":"second-secret","owner":"root","path":"/run/secrets/second-secret"}},"generator":"/nix/store/dvr437j28bzg11ymlj0kfcpifazkj3s7-test_generator_two.sh","name":"artifact-two","prompts":{},"serialization":"test","shared":false}},"config":{},"machine":"machine-two"}]
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
⚡ machine-one/artifact-one
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one --ro-bind /nix/store/afn948adxz0x9hxhz6b5kzf09a14jdqx-test_generator_one.sh/bin /nix/store/afn948adxz0x9hxhz6b5kzf09a14jdqx-test_generator_one.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd -- /bin/sh /nix/store/afn948adxz0x9hxhz6b5kzf09a14jdqx-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
⚡ machine-one/artifact-two
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two --ro-bind /nix/store/yr229cqf9dxg8sffmk8pbd37wwza5988-test_generator_two.sh/bin /nix/store/yr229cqf9dxg8sffmk8pbd37wwza5988-test_generator_two.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd -- /bin/sh /nix/store/yr229cqf9dxg8sffmk8pbd37wwza5988-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================
✅ machine-two/artifact-one
✅ machine-two/artifact-two

----- stderr -----
