pkgs/artifacts-cli/tests/snapshots/command_tests__regenerate_wrong_machine_scenarios.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - regenerate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
    - "--machine=machine-name"
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build: "/run/current-system/sw/bin/nix" "build" "--impure" "-I" "flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup" "--no-link" "--print-out-paths" "--expr" "\nlet\n  system = \"x86_64-linux\";\n  filterAttrs =\n    pred: set:\n    builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));\n  flake = builtins.getFlake (toString <flake>);\n  pkgs = flake.inputs.nixpkgs.legacyPackages.${system};\n  nixosConfigurations = builtins.attrNames (\n    filterAttrs (\n      machine: configuration: builtins.hasAttr \"artifacts\" configuration.options\n    ) flake.nixosConfigurations\n  );\n  homeConfigurations =\n    let hc = if builtins.hasAttr \"homeConfigurations\" flake then flake.homeConfigurations else {};\n    in builtins.attrNames (\n      filterAttrs (\n        user: configuration: builtins.hasAttr \"artifacts\" configuration.options\n      ) hc\n    );\n  nixos = map (name: {\n    machine = name;\n    artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.nixosConfigurations.${name}.config.artifacts) then\n        flake.nixosConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) nixosConfigurations;\n  home = map (name: {\n    user = name;\n    artifacts = flake.homeConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.homeConfigurations.${name}.config.artifacts) then\n        flake.homeConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) homeConfigurations;\n  make = { inherit nixos home; };\nin\npkgs.writeText \"test.json\" (builtins.toJSON make)\n"
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-one"
DEBUG:     },
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/pwyaca1xgqx07pggwd6k3mywyc0mgjnd-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/wciybsclyhlydjhk704mxyij7rrx02cw-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-two"
DEBUG:     }
DEBUG:   ]
DEBUG: }
✅ machine-one/artifact-one
✅ machine-one/artifact-two
✅ machine-two/artifact-one
✅ machine-two/artifact-two

----- stderr -----
